--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+kosagi-repo (1.1-r1) unstable; urgency=medium
+
+  * Add new key with expiry in 2020
+  * Add new repo to use with new key
+
+ -- Sean Cross <xobs@kosagi.com>  Wed, 26 Aug 2015 16:10:34 +0800
+
 kosagi-repo (1.0-r1) unstable; urgency=low
 
   * Initial release
