debian: Update package version to v1.2-r1
This version has a copy of the key that works.

Signed-off-by: Sean Cross <xobs@kosagi.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kosagi-repo (1.2-r1) unstable; urgency=medium
+
+  * Replaced kosagi key with signing key
+
+ -- Sean Cross <xobs@kosagi.com>  Thu, 27 Aug 2015 15:20:43 +0800
+
 kosagi-repo (1.1-r1) unstable; urgency=medium
 
   * Add new key with expiry in 2020
